# rustfirst

./: Cargo.toml  README.md
config/: default.toml
src/: app.rs  config.rs  db.rs  main.rs  server.rs
src/config/: mod.rs
src/domain/models/: categoria.rs  mod.rs  producto.rs
src/presentation/: docs.rs  mod.rs
src/presentation/handlers/: categorias.rs  mod.rs  productos.rs
src/presentation/models/: mod.rs  productCreate.rs  producto.rs
src/presentation/routes/: categorias.rs  hello.rs  mod.rs  producto.rs  productos.rs
